# wedowind_ode_benchmarking

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
wedowind_ode_benchmarker/: __init__.py  benchmark_data_collector.py  benchmark_data_parser.py  benchmark_data_processor.py  benchmark_datasets.py  benchmark_runner.py  data_filterers.py  main.py  registry.py  variables.py  wind_speed_estimators.py  yaw_error_estimators.py
