[build-system]
requires = [
    "setuptools>=75.6",
    "wheel>=0.45",
]

[project]
name = "wedowind_ode_benchmarker"
version = "0.0.1"
description = "Benchmarking of prediction methods for the WeDoWind Open Data Exploration (ODE) space"
authors = [
  {name="Christian Jonsson", email="christianj@kudosoftware.com"},
]
readme = "README.md"
requires-python = "~=3.12"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies"]

[project.scripts]
wedowind_ode_benchmarker = "wedowind_ode_benchmarker.main:main"

[tool.setuptools]
packages = ["wedowind_ode_benchmarker"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 88

[tool.mypy]
files = ["wedowind_ode_benchmarker"]
plugins = ["numpy.typing.mypy_plugin"]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
